--- a/src/index.html
+++ b/src/index.html
@@ -25,9 +25,11 @@
           <div class="hero-content">
             <h1>Natural forest <span>HTML/CSS</span></h1>
             <div class="hero-content__p">
-              Creating a beautiful 3d website with a 'lens effect' (cекса не будет)
+              Creating a beautiful 3d website with a 'lens effect'
             </div>
-            <button class="button-start" onclick="startRain()">Start learning</button>
+            <button class="button-start" onclick="startRain()">
+              Start learning
+            </button>
           </div>
         </div>
         <div class="layers__item layer-4">
