--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,7 @@
               Creating a beautiful 3d website with a 'lens effect'
             </div>
             <button class="button-start" onclick="startRain()">
-              Start learning
+              Start learning, but im so cool
             </button>
           </div>
         </div>
